[gd_scene load_steps=5 format=2]

[ext_resource path="res://Space.gd" type="Script" id=1]
[ext_resource path="res://txt.tres" type="DynamicFont" id=2]
[ext_resource path="res://Space.png" type="Texture" id=3]
[ext_resource path="res://NextLevel.gd" type="Script" id=4]

[node name="LevelChange" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 960, 540 )
z_index = 4096
texture = ExtResource( 3 )

[node name="NextLevel" type="Label" parent="."]
margin_left = 400.0
margin_top = 400.0
margin_right = 1210.0
margin_bottom = 464.0
custom_fonts/font = ExtResource( 2 )
text = "Proceeding To Next Level."
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="NextLevel"]
one_shot = true

[node name="SwitchTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="NextLevel/Timer" to="NextLevel" method="_on_Timer_timeout"]
[connection signal="timeout" from="SwitchTimer" to="NextLevel" method="_on_SwitchTimer_timeout"]
